force-app/main/default/objects/Authority_Approvals__c/Authority_Approvals__c.object-meta.xml
<CustomObject>
    <label>Authority Approvals</label>
    <nameField>
        <label>Authority Approvals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authority Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>