force-app/main/default/objects/Authority_Approvals__c/fields/Clinical_Trials__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trials__c</fullName>
    <label>Clinical Trials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>