force-app/main/default/objects/Authority_Approvals__c/fields/Crime_BB_Crime__c.field-meta.xml
<CustomField>
    <fullName>Crime_BB_Crime__c</fullName>
    <label>Crime_BB-Crime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>