force-app/main/default/objects/Authority_Approvals__c/fields/D_and_O_D3_D_O_excl_FI_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>D_and_O_D3_D_O_excl_FI_excl_USA__c</fullName>
    <label>D&amp;O_D3-D&amp;O excl FI excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>