force-app/main/default/objects/Authority_Approvals__c/fields/D_and_O_D4_D_O_FI_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>D_and_O_D4_D_O_FI_incl_USA__c</fullName>
    <label>D&amp;O_D4-D&amp;O FI incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>