force-app/main/default/objects/Authority_Approvals__c/fields/FI_PI_F2_PI_FI_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>FI_PI_F2_PI_FI_incl_USA__c</fullName>
    <label>FI - PI_F2-PI FI incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>