force-app/main/default/objects/Authority_Approvals__c/fields/FI_PI_F3_PI_FI_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>FI_PI_F3_PI_FI_excl_USA__c</fullName>
    <label>FI - PI_F3-PI FI excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>