force-app/main/default/objects/Authority_Approvals__c/fields/GLPL_7T_Terrorism_TPL__c.field-meta.xml
<CustomField>
    <fullName>GLPL_7T_Terrorism_TPL__c</fullName>
    <label>GLPL_7T-Terrorism TPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>