force-app/main/default/objects/Authority_Approvals__c/fields/GLPL_NA_GL_PL_excl_Claims_Made_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>GLPL_NA_GL_PL_excl_Claims_Made_excl_USA__c</fullName>
    <label>GLPL_NA-GL/ PL excl Claims Made excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>