force-app/main/default/objects/Authority_Approvals__c/fields/GLPL_NC_GL_PL_Claims_Made_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>GLPL_NC_GL_PL_Claims_Made_excl_USA__c</fullName>
    <label>GLPL_NC-GL/ PL Claims Made excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>