force-app/main/default/objects/Authority_Approvals__c/fields/GLPL_UA_GL_PL_excl_Claims_Made_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>GLPL_UA_GL_PL_excl_Claims_Made_incl_USA__c</fullName>
    <label>GLPL_UA-GL/ PL excl Claims Made incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>