force-app/main/default/objects/Authority_Approvals__c/fields/GLPL_UC_GL_PL_Claims_Made_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>GLPL_UC_GL_PL_Claims_Made_incl_USA__c</fullName>
    <label>GLPL_UC-GL/ PL Claims Made incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>