force-app/main/default/objects/Authority_Approvals__c/fields/Life_Sc_NA_GL_PL_excl_Claims_Made__c.field-meta.xml
<CustomField>
    <fullName>Life_Sc_NA_GL_PL_excl_Claims_Made__c</fullName>
    <label>Life Science_NA-GL/ PL excl Claims Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>