force-app/main/default/objects/Authority_Approvals__c/fields/PG_Op_Power_Gen_Transmission_Util_excl__c.field-meta.xml
<CustomField>
    <fullName>PG_Op_Power_Gen_Transmission_Util_excl__c</fullName>
    <label>PG-Op Power Gen Transmission/ Util excl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>