force-app/main/default/objects/Authority_Approvals__c/fields/PI_E2_PI_Legal_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_E2_PI_Legal_incl_USA__c</fullName>
    <label>PI_E2-PI Legal incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>