force-app/main/default/objects/Authority_Approvals__c/fields/PI_E3_PI_Legal_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_E3_PI_Legal_excl_USA__c</fullName>
    <label>PI_E3-PI Legal excl USA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>