force-app/main/default/objects/Authority_Approvals__c/fields/PI_E5_PI_Acc_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_E5_PI_Acc_excl_USA__c</fullName>
    <label>PI_E5-PI Acc excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>