force-app/main/default/objects/Authority_Approvals__c/fields/PI_E6_PI_Arch_Eng_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_E6_PI_Arch_Eng_incl_USA__c</fullName>
    <label>PI_E6-PI Arch/ Eng incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>