force-app/main/default/objects/Authority_Approvals__c/fields/PI_E7_PI_Arch_Eng_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_E7_PI_Arch_Eng_excl_USA__c</fullName>
    <label>PI_E7-PI Arch/ Eng excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>