force-app/main/default/objects/Authority_Approvals__c/fields/PI_E8_PI_excl_Legal_Acc_Arch_Eng_FI_in__c.field-meta.xml
<CustomField>
    <fullName>PI_E8_PI_excl_Legal_Acc_Arch_Eng_FI_in__c</fullName>
    <label>E8-PI excl Legal/ Acc / Arch/ Eng/ FI in</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>