force-app/main/default/objects/Authority_Approvals__c/fields/PI_E9_PI_excl_Legal_Acc_Arch_Eng_FI_ex__c.field-meta.xml
<CustomField>
    <fullName>PI_E9_PI_excl_Legal_Acc_Arch_Eng_FI_ex__c</fullName>
    <label>E9-PI excl Legal/ Acc / Arch/ Eng/ FI ex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>