force-app/main/default/objects/Authority_Approvals__c/fields/PI_F4_PI_Tech_TelCo_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_F4_PI_Tech_TelCo_incl_USA__c</fullName>
    <label>PI_F4-PI Tech/ TelCo incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>