force-app/main/default/objects/Authority_Approvals__c/fields/PI_F5_PI_Tech_TelCo_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>PI_F5_PI_Tech_TelCo_excl_USA__c</fullName>
    <label>PI_F5-PI Tech/ TelCo excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>