force-app/main/default/objects/Authority_Approvals__c/fields/Pt_6T_Overseas_Legal_Terrorism_Property__c.field-meta.xml
<CustomField>
    <fullName>Pt_6T_Overseas_Legal_Terrorism_Property__c</fullName>
    <label>6T-Overseas Legal Terrorism - Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>