force-app/main/default/objects/Authority_Approvals__c/fields/Pt_B5_PD_Binder_Comm_Prop_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>Pt_B5_PD_Binder_Comm_Prop_excl_USA__c</fullName>
    <label>Pt_B5-PD Binder Comm Prop excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>