force-app/main/default/objects/Authority_Approvals__c/fields/Pt_P3_PD_Primary_Layer_Property_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>Pt_P3_PD_Primary_Layer_Property_excl_USA__c</fullName>
    <label>Pt_P3-PD Primary Layer Property excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>