force-app/main/default/objects/Authority_Approvals__c/fields/Pt_P4_PD_Full_Value_Property_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>Pt_P4_PD_Full_Value_Property_incl_USA__c</fullName>
    <label>Pt_P4-PD Full Value Property incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>