force-app/main/default/objects/Authority_Approvals__c/fields/Pt_P5_PD_Full_Value_Property_excl_USA__c.field-meta.xml
<CustomField>
    <fullName>Pt_P5_PD_Full_Value_Property_excl_USA__c</fullName>
    <label>Pt_P5-PD Full Value Property excl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>