force-app/main/default/objects/Authority_Approvals__c/fields/Pt_P6_PD_XS_Layer_Property_incl_USA__c.field-meta.xml
<CustomField>
    <fullName>Pt_P6_PD_XS_Layer_Property_incl_USA__c</fullName>
    <label>Pt_P6-PD XS Layer Property incl USA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>