force-app/main/default/objects/Authority_Approvals__c/fields/Pt_PB_Product_Recall__c.field-meta.xml
<CustomField>
    <fullName>Pt_PB_Product_Recall__c</fullName>
    <label>Pt_PB-Product Recall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>