force-app/main/default/objects/Authority_Approvals__c/fields/Pt_TR_PD_Direct_Prop_RI__c.field-meta.xml
<CustomField>
    <fullName>Pt_TR_PD_Direct_Prop_RI__c</fullName>
    <label>Pt_TR-PD (Direct Prop RI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>