force-app/main/default/objects/Authority_Approvals__c/fields/V_Cargo_All_Risks_incl_War_excl_War_Ri__c.field-meta.xml
<CustomField>
    <fullName>V_Cargo_All_Risks_incl_War_excl_War_Ri__c</fullName>
    <label>V-Cargo (All Risks incl War, excl War Ri</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>