force-app/main/default/objects/Authority_Approvals__c/fields/VFP_PI__c.field-meta.xml
<CustomField>
    <fullName>VFP_PI__c</fullName>
    <label>VFP_PI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>