force-app/main/default/objects/Authority_Approvals__c/fields/VG_User_Name__c.field-meta.xml
<CustomField>
    <fullName>VG_User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User  Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bridge_Authority_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>