force-app/main/default/objects/Authority_Approvals__c/fields/X3_NM_Prop_or_Pecuniary_Loss_XL_on_XL_Re__c.field-meta.xml
<CustomField>
    <fullName>X3_NM_Prop_or_Pecuniary_Loss_XL_on_XL_Re__c</fullName>
    <label>X3-NM Prop or Pecuniary Loss XL on XL Re</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>