force-app/main/default/objects/Authority_Approvals__c/recordTypes/VFP.recordType-meta.xml
<RecordType>
    <fullName>VFP</fullName>
    <active>true</active>
    <label>VFP</label>
</RecordType>