force-app/main/default/objects/Authority_Approvals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>VG_User_Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>